# CJWproductivity

./: CHANGELOG.md  PLAN_FEATURE_GUIDE.md  PROJECT_UNDERSTANDING.md  README.md  TODO.md  index.html  package-lock.json  package.json  理解项目总结.md
CJWproductivity-main/: .gitignore  AI_GUIDE.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  MODULARIZATION_GUIDE.md  NEXT_STEPS.md  PHASE1_COMPLETION.md  README.md  build.config.example.json  index.html  package-lock.json  package.json  tailwind.config.js
CJWproductivity-main/configs/: README.md  free.json  full.json
CJWproductivity-main/scripts/: generate-ico.mjs  generate-icons.cjs  generate-nsis-images.cjs
CJWproductivity-main/src/: App.tsx  index.css  main.tsx
CJWproductivity-main/src-tauri/: Cargo.toml  tauri.conf.json
CJWproductivity-main/src-tauri/capabilities/: default.json
CJWproductivity-main/src-tauri/icons/: .gitkeep  icon.icns
CJWproductivity-main/src-tauri/nsis/: LICENSE.txt
CJWproductivity-main/src-tauri/src/: main.rs
CJWproductivity-main/src-tauri/windows/: hooks.nsh
scripts/: generate-icons.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: LICENSE.txt
src-tauri/src/: main.rs  wallpaper_engine.rs
src/components/: Background.tsx  CalendarView.tsx  DynamicIsland.tsx  ErrorBoundary.tsx  Header.tsx  LiveWallpaper.tsx  NotesLayout.tsx  PlansView.tsx  RichTextEditor.tsx  SplashWindow.tsx  TaskContextMenu.tsx  TasksView.tsx  TimeBlockView.tsx  UnifiedTaskCard.tsx  lazy.tsx
src/config/: constants.ts  env.ts
(+146 files in other folders)
