[package]
name = "cjwproductivity"
version = "0.1.0"
description = "A Zero-Friction Task Management Tool"
authors = ["CJW"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = "3.2"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
dirs = "5"
image = "0.25"

# 原生渲染引擎
tiny-skia = "0.11"
fontdb = "0.16"
rusttype = "0.9"

# Native wallpaper rendering
png = "0.17"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
